feat: add keep-alive mechanism