@@ -27,10 +27,10 @@ public class IfMatchValidator implements FileValidator {
 
         String fileETag;
         try {
-            String fileContents = Files.readString(filePath);
+            byte[] fileContents = Files.readAllBytes(filePath);
             fileETag = HttpUtils.calculateETag(fileContents);
         } catch (IOException | NoSuchAlgorithmException e) {
-            Logger.warn("Failed to calculate ETag of file {} while validating If-Match header", filePath, e);
+            Logger.warn(e, "Failed to calculate ETag of file {} while validating If-Match header", filePath);
             throw new IOException(e);
         }
 
